--- a/app/templates/askAuthorization.html
+++ b/app/templates/askAuthorization.html
@@ -1,5 +1,7 @@
 <div class="row column text-center">
-    <p>The Great Weather needs to know your location. Do you allow?</p>
-    <a href="#" class="button large">Allow</a>
-    <a href="#" class="button large hollow">Deny</a>
+    <p>I need to know your location. Do you allow?</p>
+    <a ng-click="$ctrl.allow()" class="button large">Allow</a>
+    <a ng-click="$ctrl.deny()" class="button large hollow">Deny</a>
 </div>
+
+{{ $ctrl.Weather.data }}
