updates on location code

--- a/app/templates/askAuthorization.html
+++ b/app/templates/askAuthorization.html
@@ -1,7 +1,7 @@
 <div class="row column text-center">
     <p>I need to know your location. Do you allow?</p>
-    <a ng-click="$ctrl.allow()" class="button large">Allow</a>
-    <a ng-click="$ctrl.deny()" class="button large hollow">Deny</a>
+    <a ng-click="$ctrl.Weather.allow()" class="button large">Allow</a>
+    <a ng-click="$ctrl.Weather.deny()" class="button large hollow">Deny</a>
 </div>
 
 {{ $ctrl.Weather.data }}
