update Geolocation service

--- a/app/templates/askAuthorization.html
+++ b/app/templates/askAuthorization.html
@@ -1,7 +1,5 @@
 <div class="row column text-center">
-    <p>I need to know your location. Do you allow?</p>
-    <a ng-click="$ctrl.Weather.allow()" class="button large">Allow</a>
-    <a ng-click="$ctrl.Weather.deny()" class="button large hollow">Deny</a>
+    <p>Auto location step</p>
 </div>
 
-{{ $ctrl.Weather.data }}
+{{ $ctrl.Geolocation.data }}
