--- a/app/templates/askAuthorization.html
+++ b/app/templates/askAuthorization.html
@@ -1,5 +1,3 @@
 <div class="row column text-center">
-    <p>Auto location step</p>
+    <p>Trying to retrieve the weather...</p>
 </div>
-
-{{ $ctrl.data }}
