--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -1,6 +1,6 @@
 <div class="callout large top">
     <div class="row column text-center">
-        <h1>The Great Weather Guru</h1>
-        <p class="lead">Forget the time when you was catched up by a rain</p>
+        <h1>The Great Weather Journal</h1>
+        <p class="lead">current weather information</p>
     </div>
 </div>
